Make koi jobs manual+nightly
This should help with CI load and avoid koi clone failures that we're
seeing.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -218,16 +218,27 @@ build:linux:x86:focal:install_deps:
 build:linux:x86:focal:
   image: ${DORADO_DOCKER_ROOT}/dorado-deps-20.04-cuda-${CUDA}.0:1.1
   variables:
-    BUILD_OPTIONS: "-DBUILD_KOI_FROM_SOURCE=ON -DGITLAB_CI_TOKEN=${CI_JOB_TOKEN} -DONT_MM2_EXE=ON"
+    BUILD_OPTIONS: "-DONT_MM2_EXE=ON"
   extends:
     - .linux_dependencies
     - .linux_runner
     - .build_and_test_dorado
 
+build:linux:x86:focal_koi_from_source:
+  image: ${DORADO_DOCKER_ROOT}/dorado-deps-20.04-cuda-${CUDA}.0:1.1
+  variables:
+    BUILD_OPTIONS: "-DBUILD_KOI_FROM_SOURCE=ON -DGITLAB_CI_TOKEN=${CI_JOB_TOKEN} -DONT_MM2_EXE=ON"
+  extends:
+    - .linux_dependencies
+    - .linux_runner
+    - .build_and_test_dorado
+    - .on_nightly_or_manual
+  artifacts: null
+
 build:linux:x86:jammy:
   image: ${DORADO_DOCKER_ROOT}/dorado-deps-22.04-cuda-${CUDA}.0:1.1
   variables:
-    BUILD_OPTIONS: "-DBUILD_KOI_FROM_SOURCE=ON -DGITLAB_CI_TOKEN=${CI_JOB_TOKEN} -DONT_MM2_EXE=ON"
+    BUILD_OPTIONS: "-DONT_MM2_EXE=ON"
   extends:
     - .linux_dependencies
     - .linux_runner
@@ -352,18 +363,11 @@ build:linux:arm64:focal:no_ccache:
     - .on_nightly_or_manual
   artifacts: null
 
-build:linux:x86:focal_koi_download:
-  image: ${DORADO_DOCKER_ROOT}/dorado-deps-20.04-cuda-${CUDA}.0:1.1
-  extends:
-    - .linux_runner
-    - .build_and_test_dorado
-  artifacts: null
-
-build:linux:x86:focal_koi_download:no_ccache:
+build:linux:x86:focal:no_ccache:
   variables:
     BUILD_OPTIONS: "-D DORADO_DISABLE_CCACHE=ON"
   extends:
-    - build:linux:x86:focal_koi_download
+    - build:linux:x86:focal
     - .on_nightly_or_manual
   artifacts: null
 
@@ -373,7 +377,7 @@ build:windows:
     - .build_and_test_dorado
   before_script:
     - export CUDA_TOOLKIT=$(cygpath -u $(cygpath -d "${WIN_CUDA_TOOLKIT}"))
-    - export BUILD_OPTIONS="-A x64 -T cuda=${CUDA} -DCUDAToolkit_ROOT=${CUDA_TOOLKIT} -D WIN_THREADS=4 -DBUILD_KOI_FROM_SOURCE=ON -DGITLAB_CI_TOKEN=${CI_JOB_TOKEN}"
+    - export BUILD_OPTIONS="-A x64 -T cuda=${CUDA} -DCUDAToolkit_ROOT=${CUDA_TOOLKIT} -D WIN_THREADS=4"
 
 build:windows:debug:
   variables:
@@ -384,13 +388,13 @@ build:windows:debug:
     - if: $CI_MERGE_REQUEST_EVENT_TYPE == "merged_result"
   artifacts: null
 
-build:windows_koi_download:
+build:windows_koi_from_source:
   extends:
-    - .windows_runner
-    - .build_and_test_dorado
+    - build:windows
+    - .on_nightly_or_manual
   before_script:
-    - export CUDA_TOOLKIT=$(cygpath -u $(cygpath -d "${WIN_CUDA_TOOLKIT}"))
-    - export BUILD_OPTIONS="-A x64 -T cuda=${CUDA} -DCUDAToolkit_ROOT=${CUDA_TOOLKIT} -D WIN_THREADS=4"
+    - !reference ["build:windows", before_script]
+    - export BUILD_OPTIONS="${BUILD_OPTIONS} -DBUILD_KOI_FROM_SOURCE=ON -DGITLAB_CI_TOKEN=${CI_JOB_TOKEN}"
   artifacts: null
 
 build:macos:arm:
@@ -463,8 +467,6 @@ build:ios_sim:m1:
 
 build_archive:linux:x86:focal:
   image: ${DORADO_DOCKER_ROOT}/dorado-deps-20.04-cuda-${CUDA}.0:1.1
-  variables:
-    BUILD_OPTIONS: "-DBUILD_KOI_FROM_SOURCE=ON -DGITLAB_CI_TOKEN=${CI_JOB_TOKEN}"
   extends:
     - .linux_runner
     - .build_dorado_archive
@@ -499,7 +501,7 @@ build_archive:linux:arm64:focal:
 build_archive:linux:x86:centos7:
   image: ${DORADO_DOCKER_ROOT}/dorado-deps-centos7-cuda-${CUDA}.0:1.1
   variables:
-    BUILD_OPTIONS: "-DBUILD_KOI_FROM_SOURCE=ON -DGITLAB_CI_TOKEN=${CI_JOB_TOKEN} -DDORADO_USING_OLD_CPP_ABI=ON -DDYNAMIC_HDF=ON"
+    BUILD_OPTIONS: "-DDORADO_USING_OLD_CPP_ABI=ON -DDYNAMIC_HDF=ON"
   extends:
     - .linux_runner
     - .build_dorado_archive
@@ -508,7 +510,7 @@ build_archive:linux:x86:centos7:
 build_archive:windows:
   before_script:
     - export CUDA_TOOLKIT=$(cygpath -u $(cygpath -d "${WIN_CUDA_TOOLKIT}"))
-    - export BUILD_OPTIONS="-A x64 -T cuda=${CUDA} -DCUDAToolkit_ROOT=${CUDA_TOOLKIT} -DBUILD_KOI_FROM_SOURCE=ON -DGITLAB_CI_TOKEN=${CI_JOB_TOKEN}"
+    - export BUILD_OPTIONS="-A x64 -T cuda=${CUDA} -DCUDAToolkit_ROOT=${CUDA_TOOLKIT}"
   extends:
     - .windows_runner
     - .build_dorado_archive
