Added a placeholder for PolishSampleTest.cpp.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -72,6 +72,7 @@ add_executable(dorado_tests
     TimeUtilsTest.cpp
     TrimTest.cpp
     PafUtilsTest.cpp
+    PolishSampleTest.cpp
     PolishTrimTest.cpp
     PolishWindowTest.cpp
 )
