Added a new file dorado/utils/rle.h with a generic function for computing run length encoding.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -358,6 +358,7 @@ add_library(dorado_lib
     dorado/polish/architectures/model_torch_base.h
     dorado/polish/architectures/model_torch_script.cpp
     dorado/polish/architectures/model_torch_script.h
+    dorado/utils/rle.h
     dorado/utils/ssize.h
     dorado/utils/span.h
 )
