Implemented a VCF writer using Htslib. Separated the Variant struct into its own file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -325,8 +325,11 @@ add_library(dorado_lib
     dorado/polish/sample.h
     dorado/polish/trim.cpp
     dorado/polish/trim.h
+    dorado/polish/variant.h
     dorado/polish/variant_calling.cpp
     dorado/polish/variant_calling.h
+    dorado/polish/vcf_writer.cpp
+    dorado/polish/vcf_writer.h
     dorado/polish/window.cpp
     dorado/polish/window.h
     dorado/polish/features/decoder_base.cpp
