Using float instead of double for computing the phred variant calling scores because Htslib uses a float anyway. Changed the Variant::qual to float from std::string. Added operator<< for Variant.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -325,6 +325,7 @@ add_library(dorado_lib
     dorado/polish/sample.h
     dorado/polish/trim.cpp
     dorado/polish/trim.h
+    dorado/polish/variant.cpp
     dorado/polish/variant.h
     dorado/polish/variant_calling.cpp
     dorado/polish/variant_calling.h
