[INSTX-6217] Replace raw commit with version number

--- a/dorado/3rdparty/software_versions.yml
+++ b/dorado/3rdparty/software_versions.yml
@@ -165,7 +165,7 @@ zlib-ng:
 zstd:
     description: >
         Fast lossless compression algorithm.
-    version: "97a3da1df009d4dc67251de0c4b1c9d7fe286fc1"
+    version: "v1.4.8"
     url: https://github.com/facebook/zstd
     license: zstd/LICENSE
     files:
