[DOR-1048] Bump toml11 version
This required some build fixes due to the major version change.

Also simplify the use of toml in the tests since the old code no longer
compiled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -388,7 +388,6 @@ target_include_directories(dorado_lib
     SYSTEM
     PUBLIC
         ${DORADO_3RD_PARTY_SOURCE}/argparse
-        ${DORADO_3RD_PARTY_SOURCE}/toml11
         ${DORADO_3RD_PARTY_SOURCE}/hdf_plugins/vbz_plugin
         ${DORADO_3RD_PARTY_SOURCE}/cxxpool/src
         ${DORADO_3RD_PARTY_SOURCE}/NVTX/c/include
@@ -416,6 +415,7 @@ target_link_libraries(dorado_lib
         dorado_modbase
     PRIVATE
         minimap2
+        toml11::toml11
 )
 
 if(NOT WIN32)
