--- a/dorado/3rdparty/CMakeLists.txt
+++ b/dorado/3rdparty/CMakeLists.txt
@@ -31,3 +31,7 @@ set(BUILD_TESTING ON)
 
 # date
 add_subdirectory(date EXCLUDE_FROM_ALL)
+
+# toml11
+set(TOML11_PRECOMPILE ON)
+add_subdirectory(toml11 EXCLUDE_FROM_ALL)
