--- a/dorado/3rdparty/software_versions.yml
+++ b/dorado/3rdparty/software_versions.yml
@@ -157,7 +157,7 @@ streamvbyte:
 toml11:
     description: >
         TOML for Modern C++
-    version: "59243256528d4133321e845c3193db2d2725e6ee"
+    version: "v4.2.0"
     url: https://github.com/ToruNiina/toml11
     license: toml11/LICENSE
     files:
