[DOR-1048] Bump cxxpool version
Technically this reduces the version, but now we're using a released
version. We can apply the latest commit as a patch if necessary when
jumping to C++20.

--- a/dorado/3rdparty/software_versions.yml
+++ b/dorado/3rdparty/software_versions.yml
@@ -35,7 +35,7 @@ cutlass:
 cxxpool:
     description: >
         A header-only thread pool for C++
-    version: "4d8526e93771c4728cbdcd238369e434bad58d32"
+    version: "2.0.0"
     url: https://github.com/bloomen/cxxpool
     license: cxxpool/LICENSE
     files:
