[DOR-1048] Make argparse a submodule
This matches the rest of our 3rdparty libs. Comparing old and new, we
had no changes to the header so it's not a version bump.

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "dorado/3rdparty/date"]
 	path = dorado/3rdparty/date
 	url = https://github.com/HowardHinnant/date.git
+[submodule "dorado/3rdparty/argparse"]
+	path = dorado/3rdparty/argparse
+	url = https://github.com/p-ranav/argparse.git
