--- a/dorado/3rdparty/CMakeLists.txt
+++ b/dorado/3rdparty/CMakeLists.txt
@@ -1,3 +1,6 @@
+# argparse
+add_subdirectory(argparse EXCLUDE_FROM_ALL)
+
 # Bring in spdlog
 add_subdirectory(spdlog EXCLUDE_FROM_ALL)
 # Avoid namespace clashes with static torch.
