[DOR-1048] Bump catch2 version
Major change so catch2 is now a static library that you link to instead
of being a massive header that takes a while to compile.

No effort was made to shrink the includes, yet.

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "dorado/3rdparty/argparse"]
 	path = dorado/3rdparty/argparse
 	url = https://github.com/p-ranav/argparse.git
+[submodule "dorado/3rdparty/catch2"]
+	path = dorado/3rdparty/catch2
+	url = https://github.com/catchorg/Catch2.git
