Added unit tests for run length encoding to tests/RleTest.cpp.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -75,6 +75,7 @@ add_executable(dorado_tests
     PolishSampleTest.cpp
     PolishTrimTest.cpp
     PolishWindowTest.cpp
+    RleTest.cpp
 )
 if (NOT IOS)
     target_sources(dorado_tests
