--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -317,6 +317,7 @@ add_library(dorado_lib
     dorado/polish/polish_impl.h
     dorado/polish/polish_progress_tracker.cpp
     dorado/polish/polish_progress_tracker.h
+    dorado/polish/polish_stats.h
     dorado/polish/polish_utils.cpp
     dorado/polish/polish_utils.h
     dorado/polish/region.cpp
@@ -329,6 +330,8 @@ add_library(dorado_lib
     dorado/polish/variant.h
     dorado/polish/variant_calling.cpp
     dorado/polish/variant_calling.h
+    dorado/polish/variant_calling_sample.cpp
+    dorado/polish/variant_calling_sample.h
     dorado/polish/vcf_writer.cpp
     dorado/polish/vcf_writer.h
     dorado/polish/window.cpp
