[INSTX-7939] Add missing dependency
torch_utils uses stuff from dorado_utils, so it should link to it.

--- a/dorado/torch_utils/CMakeLists.txt
+++ b/dorado/torch_utils/CMakeLists.txt
@@ -58,6 +58,7 @@ target_link_libraries(dorado_torch_utils
         spdlog::spdlog
     PRIVATE
         dorado_compat
+        dorado_utils
         minimap2
         htslib
         toml11::toml11
