Fix dirty submodule after patching

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "dorado/3rdparty/HighFive"]
 	path = dorado/3rdparty/HighFive
 	url = https://github.com/BlueBrain/HighFive.git
+	ignore = dirty
 [submodule "dorado/3rdparty/toml11"]
 	path = dorado/3rdparty/toml11
 	url = https://github.com/ToruNiina/toml11.git
