--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -697,19 +697,19 @@ test_archive:linux:arm64:18.04:
   needs:
     - build_archive:linux:arm64:bionic
 
+# Test that you can run dorado in a clean l4t environment
 test_archive:linux:arm64:20.04:
   image: ${DORADO_DOCKER_ROOT}/dorado-l4t-pytorch-r35.1.0-pth1.13-py3:1.0
   extends:
-    - .linux_test_dependencies
     - .linux_orin_runner
     - .test_archive
   needs:
     - build_archive:linux:arm64:focal
 
+# Test that you can run dorado in a clean l4t environment
 test_archive:linux:arm64:22.04:
   image: nvcr.io/nvidia/l4t-cuda:12.6.11-runtime
   extends:
-    - .linux_test_dependencies
     - .linux_orin_cuda_12_runner
     - .test_archive
   needs:
