[DOR-961] [DOR-1077] Disable polish tests on macOS after updating torch
See DOR-1077 for more info.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -637,6 +637,7 @@ test:linux:arm64:jammy:
     - .linux_orin_cuda_12_runner
     - .test_dorado
   variables:
+    # DOR-1077
     NO_TEST_DORADO_POLISH: 1
   needs:
     - build:linux:arm64:jammy
@@ -645,6 +646,9 @@ test:macos:arm:
   extends:
     - .macos_arm_runner
     - .test_dorado
+  variables:
+    # DOR-1077
+    NO_TEST_DORADO_POLISH: 1
   needs:
     - build:macos:arm
 
