[DOR-1095] Optimization: Implemented the new windowing approach in Dorado Correct with fixed-column windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -302,6 +302,8 @@ add_library(dorado_lib
     dorado/correct/decode.h
     dorado/correct/infer.cpp
     dorado/correct/infer.h
+    dorado/correct/types.cpp
+    dorado/correct/types.h
     dorado/correct/CorrectionProgressTracker.cpp
     dorado/correct/CorrectionProgressTracker.h
     dorado/polish/consensus_result.h
