[DOR-1096] New torch build for macOS 13 support
Also bump timeouts since macOS 13 is slow to run tx models.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -735,7 +735,7 @@ test:model_download:macos:arm:
     - build:macos:arm
   script:
     - ./tests/test_model_download.py --exe ./dist/bin/dorado --data ./tests/data
-  timeout: 1h 30m
+  timeout: 3h
 
 # Auto bachsize stats generation
 generate_auto_benchmarks:linux:x86:focal:
