--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -444,8 +444,7 @@ build_archive:linux:x86:cuda12:
   image: ${DORADO_DOCKER_ROOT}/dorado-no-deps-20.04-cuda-12.8.0:1.0
   variables:
     CUDA: "12.8"
-    # Note: the linker flag is a workaround for the provided torch forgetting to link to cublas.
-    #BUILD_OPTIONS: "-D DORADO_LIBTORCH_DIR=/usr/local/lib/python3.10/dist-packages/torch -D CMAKE_EXE_LINKER_FLAGS:STRING='-Wl,--copy-dt-needed-entries'"
+    BUILD_OPTIONS: "-D CMAKE_EXE_LINKER_FLAGS:STRING='--no-relax'"
   extends:
     - .linux_build_dependencies
     - .linux_runner
