[INSTX-9623] Pull in a newer change to fix cxxpool in C++20 mode
There hasn't been a release sinec then that we can use.

--- a/.gitmodules
+++ b/.gitmodules
@@ -20,6 +20,7 @@
 [submodule "dorado/3rdparty/cxxpool"]
 	path = dorado/3rdparty/cxxpool
 	url = https://github.com/bloomen/cxxpool.git
+	ignore = dirty
 [submodule "dorado/3rdparty/edlib"]
 	path = dorado/3rdparty/edlib
 	url = https://github.com/martinsos/edlib
