--- a/dorado/3rdparty/CMakeLists.txt
+++ b/dorado/3rdparty/CMakeLists.txt
@@ -30,6 +30,9 @@ add_subdirectory(argparse EXCLUDE_FROM_ALL)
 # catch2
 add_subdirectory(catch2 EXCLUDE_FROM_ALL)
 
+# cxxpool
+apply_3rdparty_patch(cxxpool)
+
 # Bring in spdlog
 add_subdirectory(spdlog EXCLUDE_FROM_ALL)
 # Avoid namespace clashes with static torch.
