[INSTX-9623] Make cxxpool a target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -367,7 +367,6 @@ target_include_directories(dorado_lib
     SYSTEM
     PUBLIC
         ${DORADO_3RD_PARTY_SOURCE}/hdf_plugins/vbz_plugin
-        ${DORADO_3RD_PARTY_SOURCE}/cxxpool/src
         ${DORADO_3RD_PARTY_SOURCE}/NVTX/c/include
         ${DORADO_3RD_PARTY_SOURCE}/indicators/include
         ${DORADO_3RD_PARTY_SOURCE}/intervaltree
@@ -396,6 +395,7 @@ target_link_libraries(dorado_lib
     PRIVATE
         minimap2
         toml11::toml11
+        cxxpool
 )
 
 if(NOT WIN32)
@@ -445,6 +445,7 @@ if(NOT DORADO_DISABLE_DORADO)
         dorado_model_downloader_lib
         dorado_compat
         minimap2
+        cxxpool
     )
 
     install(TARGETS dorado RUNTIME)
