rename file CRFModelConfig to BasecallModelConfig.h

--- a/dorado/config/CMakeLists.txt
+++ b/dorado/config/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(dorado_config STATIC
     BasecallerParams.cpp
     BasecallerParams.h
-    CRFModelConfig.cpp
-    CRFModelConfig.h
+    BasecallModelConfig.cpp
+    BasecallModelConfig.h
 )
 
 target_link_libraries(dorado_config
