move ModbaseModelConfig to conig module. Refactor RefinementParams to remove dependency on torchlib to load modbase model configs. Added load_kmer_refinement_levels function to load kmer levels in th modbase module to replace it

--- a/dorado/config/CMakeLists.txt
+++ b/dorado/config/CMakeLists.txt
@@ -3,11 +3,13 @@ add_library(dorado_config STATIC
     BatchParams.h
     BasecallModelConfig.cpp
     BasecallModelConfig.h
+    ModBaseModelConfig.cpp
+    ModBaseModelConfig.h
 )
 
 target_link_libraries(dorado_config
     PUBLIC
-        dorado_models_lib    
+        dorado_models_lib
     PRIVATE
         dorado_utils
         spdlog::spdlog
